# kozmotic

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CREDITS.md  Cargo.toml  LICENSE  README.md  TODO.md
.claude/: settings.json
.claude/hooks/: stop-check.sh
.claude/skills/agent-cli/: SKILL.md
.claude/skills/architect/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/sound/: SKILL.md
.claude/skills/statusline-setup/: SKILL.md
.claude/skills/todo/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/developer/: DIARY.md
scripts/: build.ps1  clippy.ps1  fmt.ps1  run.ps1  run.sh  self-install.ps1  self-install.sh  test.ps1  validate.ps1
src/: agent_ping.rs  main.rs  output.rs  self_install.rs  status_line.rs
tests/: integration_test.rs
xtask/: Cargo.toml
xtask/src/: helpers.rs  main.rs  validate.rs
