[package]
name = "kozmotic"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "Agent-friendly CLI tools with structured output"
readme = "README.md"
repository = "https://github.com/breki/kozmotic"
license = "MIT"
keywords = ["cli", "agent", "automation", "tools"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
rodio = { version = "0.21", default-features = false, features = ["playback", "wav", "mp3", "vorbis", "flac"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
