[workspace]
members = [".", "xtask"]

[package]
name = "kozmotic"
version = "0.1.0"
edition = "2024"
authors = ["Igor Brejc"]
description = "Portable CLI toolkit for AI agents with JSON output, sound notifications, and dev automation"
readme = "README.md"
repository = "https://github.com/breki/kozmotic"
license = "MIT"
keywords = ["cli", "ai-agent", "claude", "automation", "json"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
rodio = { version = "0.21", default-features = false, features = ["playback", "wav", "mp3", "vorbis", "flac"] }
ureq = "3"

[lints.rust]
warnings = "deny"

[lints.clippy]
perf = { level = "deny", priority = -1 }
cargo_common_metadata = "deny"
multiple_crate_versions = "allow"

[profile.test]
opt-level = 1

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
